Created responsive nav menu

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="/src/styles/css/styles.css">
 </head>
 
-<body>
+<body class="body-home">
 
     <div class="navbar__top">
         <div class="container">
@@ -29,6 +29,11 @@
         <div class="container">
             <a href="#"><img class="navbar__logo" src="/src/images/box-white.svg" alt="Company Logo"></a>
             <input class="burger-btn" type="checkbox" id="burger-btn" />
+            <label class="burger-label" for="burger-btn">
+                <span class="bar top"></span>
+                <span class="bar middle"></span>
+                <span class="bar bottom"></span>
+            </label>
             <ul class="navbar__nav">
                 <li class="nav__item"><a href="#" class="nav__link">Household</a></li>
                 <li class="nav__item"><a href="#" class="nav__link">Business</a></li>
@@ -38,6 +43,9 @@
             </ul>
         </div>
     </nav>
+
+    <header class="hero">
+    </header>
 
 
 
