Finished the hero section / created a scroll to top button

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <title>Self Storage Theme | Home</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="/src/styles/css/reset.css">
     <link rel="stylesheet" href="/src/styles/css/styles.css">
 </head>
@@ -20,13 +20,13 @@
 <body class="body-home">
 
     <div class="navbar__top">
-        <div class="container">
+        <div class="navbar__container">
             <p>Want to speak with a human? Call: <span class="navbar__phone">028 90 111 111</span></p>
         </div>
     </div>
 
     <nav class="navbar__bottom">
-        <div class="container">
+        <div class="navbar__container">
             <a href="#"><img class="navbar__logo" src="/src/images/box-white.svg" alt="Company Logo"></a>
             <input class="burger-btn" type="checkbox" id="burger-btn" />
             <label class="burger-label" for="burger-btn">
@@ -45,8 +45,17 @@
     </nav>
 
     <header class="hero">
+        <div class="hero__container-outer">
+            <div class="hero__container">
+                <h1 class="header-top">Storage</h1>
+                <h1 class="header-middle">made</h1>
+                <h1 class="header-bottom">easy</h1>
+                <button class="btn-large">Get my free quote</button>
+            </div>
+        </div>
     </header>
 
+    <div class="services"></div>
 
 
 
@@ -71,7 +80,7 @@
 
 
 
-
+    <button id="btn-to-top" class="btn-to-top">&#94;</button>
 
 
 
