--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <title>Self Storage Theme | Home</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/src/styles/css/reset.css">
     <link rel="stylesheet" href="/src/styles/css/styles.css">
 </head>
@@ -55,7 +55,112 @@
         </div>
     </header>
 
-    <div class="services"></div>
+    <div class="services">
+        <div class="services__container-outer">
+            <div class="services-header">
+                <h2>Here's What We Do:</h2>
+            </div>
+            <div class="services__container">
+                <div class="card">
+                    <div class="card__img">
+                        <a href="#"><img src="https://unsplash.it/300" alt=""></a>
+                    </div>
+                    <div class="card__caption">
+                        <h3>Household Storage</h3>
+                    </div>
+                    <div class="card__hidden">
+                        <p class="card__hidden-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Necessitatibus delectus, ea sapiente molestiae explicabo
+                            ipsum vitae quas aliquam suscipit.</p>
+                        <button><a href="#">More</a></button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card__img">
+                        <a href="#"><img src="https://unsplash.it/300" alt=""></a>
+                    </div>
+                    <div class="card__caption">
+                        <h3>Business Storage</h3>
+                    </div>
+                    <div class="card__hidden">
+                        <p class="card__hidden-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Necessitatibus delectus, ea sapiente molestiae explicabo
+                            ipsum vitae quas aliquam suscipit.</p>
+                        <button><a href="#">More</a></button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card__img">
+                        <a href="#"><img src="https://unsplash.it/300" alt=""></a>
+                    </div>
+                    <div class="card__caption">
+                        <h3>Student Storage</h3>
+                    </div>
+                    <div class="card__hidden">
+                        <p class="card__hidden-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Necessitatibus delectus, ea sapiente molestiae explicabo
+                            ipsum vitae quas aliquam suscipit.</p>
+                        <button><a href="#">More</a></button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card__img">
+                        <a href="#"><img src="https://unsplash.it/300" alt=""></a>
+                    </div>
+                    <div class="card__caption">
+                        <h3>Packing Supplies</h3>
+                    </div>
+                    <div class="card__hidden">
+                        <p class="card__hidden-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Necessitatibus delectus, ea sapiente molestiae explicabo
+                            ipsum vitae quas aliquam suscipit.</p>
+                        <button><a href="#">More</a></button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card__img">
+                        <a href="#"><img src="https://unsplash.it/300" alt=""></a>
+                    </div>
+                    <div class="card__caption">
+                        <h3>Van Hire Service</h3>
+                    </div>
+                    <div class="card__hidden">
+                        <p class="card__hidden-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Necessitatibus delectus, ea sapiente molestiae explicabo
+                            ipsum vitae quas aliquam suscipit.</p>
+                        <button><a href="#">More</a></button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card__img">
+                        <a href="#"><img src="https://unsplash.it/300" alt=""></a>
+                    </div>
+                    <div class="card__caption">
+                        <h3>Shredding Service</h3>
+                    </div>
+                    <div class="card__hidden">
+                        <p class="card__hidden-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Necessitatibus delectus, ea sapiente molestiae explicabo
+                            ipsum vitae quas aliquam suscipit.</p>
+                        <button><a href="#">More</a></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="about">
+        <div class="about__inner">
+            <div class="about__video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/jScBZN3jH8I" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
+            <div class="about__info">
+                <p>some text</p>
+            </div>
+        </div>
+    </div>
 
 
 
