--- a/src/index.html
+++ b/src/index.html
@@ -152,7 +152,7 @@
     <div class="about">
         <div class="about__inner">
             <div class="about__video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/jScBZN3jH8I" frameborder="0"
+                <iframe src="https://www.youtube.com/embed/jScBZN3jH8I" frameborder="0"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
             </div>
