changed card layout

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
                 <li class="nav__item"><a href="#" class="nav__link">Business</a></li>
                 <li class="nav__item"><a href="#" class="nav__link">Student</a></li>
                 <li class="nav__item"><a href="#" class="nav__link">Packing Supplies</a></li>
-                <button class="nav__btn"><a href="#">Quote</a></button>
+                <li class="nav__item"><a href="#" class="nav__link">FAQ's</a></li>
             </ul>
         </div>
     </nav>
@@ -48,102 +48,53 @@
         <div class="hero__container-outer">
             <div class="hero__container">
                 <h1 class="header-top">Storage</h1>
-                <h1 class="header-middle">made</h1>
-                <h1 class="header-bottom">easy</h1>
+                <h1 class="header-middle">Made</h1>
+                <h1 class="header-bottom">Easy</h1>
                 <button class="btn-large">Get my free quote</button>
             </div>
         </div>
     </header>
 
     <div class="services">
-        <div class="services__container-outer">
-            <div class="services-header">
-                <h2>Here's What We Do:</h2>
+        <div class="services__container">
+            <div class="card">
+                <div class="card__img">
+                    <a href="#"><img src="https://unsplash.it/400" alt=""></a>
+                </div>
+                <div class="card__caption">
+                    <h3>Household Storage</h3>
+                    <p class="card__hidden-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Necessitatibus delectus, ea sapiente.</p>
+                </div>
             </div>
-            <div class="services__container">
-                <div class="card">
-                    <div class="card__img">
-                        <a href="#"><img src="https://unsplash.it/300" alt=""></a>
-                    </div>
-                    <div class="card__caption">
-                        <h3>Household Storage</h3>
-                    </div>
-                    <div class="card__hidden">
-                        <p class="card__hidden-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Necessitatibus delectus, ea sapiente molestiae explicabo
-                            ipsum vitae quas aliquam suscipit.</p>
-                        <button><a href="#">More</a></button>
-                    </div>
+            <div class="card">
+                <div class="card__img">
+                    <a href="#"><img src="https://unsplash.it/400" alt=""></a>
                 </div>
-                <div class="card">
-                    <div class="card__img">
-                        <a href="#"><img src="https://unsplash.it/300" alt=""></a>
-                    </div>
-                    <div class="card__caption">
-                        <h3>Business Storage</h3>
-                    </div>
-                    <div class="card__hidden">
-                        <p class="card__hidden-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Necessitatibus delectus, ea sapiente molestiae explicabo
-                            ipsum vitae quas aliquam suscipit.</p>
-                        <button><a href="#">More</a></button>
-                    </div>
+                <div class="card__caption">
+                    <h3>Business Storage</h3>
+                    <p class="card__hidden-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Necessitatibus delectus, ea sapiente.</p>
                 </div>
-                <div class="card">
-                    <div class="card__img">
-                        <a href="#"><img src="https://unsplash.it/300" alt=""></a>
-                    </div>
-                    <div class="card__caption">
-                        <h3>Student Storage</h3>
-                    </div>
-                    <div class="card__hidden">
-                        <p class="card__hidden-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Necessitatibus delectus, ea sapiente molestiae explicabo
-                            ipsum vitae quas aliquam suscipit.</p>
-                        <button><a href="#">More</a></button>
-                    </div>
+            </div>
+            <div class="card">
+                <div class="card__img">
+                    <a href="#"><img src="https://unsplash.it/400" alt=""></a>
                 </div>
-                <div class="card">
-                    <div class="card__img">
-                        <a href="#"><img src="https://unsplash.it/300" alt=""></a>
-                    </div>
-                    <div class="card__caption">
-                        <h3>Packing Supplies</h3>
-                    </div>
-                    <div class="card__hidden">
-                        <p class="card__hidden-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Necessitatibus delectus, ea sapiente molestiae explicabo
-                            ipsum vitae quas aliquam suscipit.</p>
-                        <button><a href="#">More</a></button>
-                    </div>
+                <div class="card__caption">
+                    <h3>Student Storage</h3>
+                    <p class="card__hidden-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Necessitatibus delectus, ea sapiente.</p>
                 </div>
-                <div class="card">
-                    <div class="card__img">
-                        <a href="#"><img src="https://unsplash.it/300" alt=""></a>
-                    </div>
-                    <div class="card__caption">
-                        <h3>Van Hire Service</h3>
-                    </div>
-                    <div class="card__hidden">
-                        <p class="card__hidden-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Necessitatibus delectus, ea sapiente molestiae explicabo
-                            ipsum vitae quas aliquam suscipit.</p>
-                        <button><a href="#">More</a></button>
-                    </div>
+            </div>
+            <div class="card">
+                <div class="card__img">
+                    <a href="#"><img src="https://unsplash.it/400" alt=""></a>
                 </div>
-                <div class="card">
-                    <div class="card__img">
-                        <a href="#"><img src="https://unsplash.it/300" alt=""></a>
-                    </div>
-                    <div class="card__caption">
-                        <h3>Shredding Service</h3>
-                    </div>
-                    <div class="card__hidden">
-                        <p class="card__hidden-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Necessitatibus delectus, ea sapiente molestiae explicabo
-                            ipsum vitae quas aliquam suscipit.</p>
-                        <button><a href="#">More</a></button>
-                    </div>
+                <div class="card__caption">
+                    <h3>Packing Supplies</h3>
+                    <p class="card__hidden-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Necessitatibus delectus, ea sapiente.</p>
                 </div>
             </div>
         </div>
