Created hoe storage works section

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
                 <span class="bar bottom"></span>
             </label>
             <ul class="navbar__nav">
-                <li class="nav__item"><a href="#" class="nav__link">Household</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">House</a></li>
                 <li class="nav__item"><a href="#" class="nav__link">Business</a></li>
                 <li class="nav__item"><a href="#" class="nav__link">Student</a></li>
                 <li class="nav__item"><a href="#" class="nav__link">Packing Supplies</a></li>
@@ -58,63 +58,91 @@
     <div class="services">
         <div class="services__container">
             <div class="card">
-                <div class="card__img">
-                    <a href="#"><img src="https://unsplash.it/400" alt=""></a>
-                </div>
-                <div class="card__caption">
-                    <h3>Household Storage</h3>
-                    <p class="card__hidden-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Necessitatibus delectus, ea sapiente.</p>
-                </div>
+                <a href="#">
+                    <div class="card__img">
+                        <img src="/src/images/1.jpg" alt="">
+                    </div>
+                    <div class="card__caption">
+                        <h3 class="card__caption__header">House Storage</h3>
+                        <p class="card__caption__text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Necessitatibus delectus, ea sapiente.</p>
+                    </div>
+                </a>
             </div>
             <div class="card">
-                <div class="card__img">
-                    <a href="#"><img src="https://unsplash.it/400" alt=""></a>
-                </div>
-                <div class="card__caption">
-                    <h3>Business Storage</h3>
-                    <p class="card__hidden-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Necessitatibus delectus, ea sapiente.</p>
-                </div>
+                <a href="#">
+                    <div class="card__img">
+                        <img src="/src/images/1.jpg" alt="">
+                    </div>
+                    <div class="card__caption">
+                        <h3 class="card__caption__header">Business Storage</h3>
+                        <p class="card__caption__text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Necessitatibus delectus, ea sapiente.</p>
+                    </div>
+                </a>
             </div>
             <div class="card">
-                <div class="card__img">
-                    <a href="#"><img src="https://unsplash.it/400" alt=""></a>
-                </div>
-                <div class="card__caption">
-                    <h3>Student Storage</h3>
-                    <p class="card__hidden-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Necessitatibus delectus, ea sapiente.</p>
-                </div>
+                <a href="#">
+                    <div class="card__img">
+                        <img src="/src/images/1.jpg" alt="">
+                    </div>
+                    <div class="card__caption">
+                        <h3 class="card__caption__header">Student Storage</h3>
+                        <p class="card__caption__text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Necessitatibus delectus, ea sapiente.</p>
+                    </div>
+                </a>
             </div>
             <div class="card">
-                <div class="card__img">
-                    <a href="#"><img src="https://unsplash.it/400" alt=""></a>
-                </div>
-                <div class="card__caption">
-                    <h3>Packing Supplies</h3>
-                    <p class="card__hidden-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Necessitatibus delectus, ea sapiente.</p>
-                </div>
+                <a href="#">
+                    <div class="card__img">
+                        <img src="/src/images/1.jpg" alt="">
+                    </div>
+                    <div class="card__caption">
+                        <h3 class="card__caption__header">Packing Supplies</h3>
+                        <p class="card__caption__text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Necessitatibus delectus, ea sapiente.</p>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
 
-    <div class="about">
-        <div class="about__inner">
-            <div class="about__video">
-                <iframe src="https://www.youtube.com/embed/jScBZN3jH8I" frameborder="0"
-                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+    <hr>
+
+    <div class="how-works">
+        <h2>How Self Storage Works</h2>
+        <div class="how-works__container">
+            <div class="item-outer">
+                <h3 class="item-outer__header">1 .</h3>
+                <div class="how-works__item">
+                    <img class="how-works__img" src="/src/images/computer.svg" alt="">
+                    <p>Complete the enquiry form online</p>
+                </div>
             </div>
-            <div class="about__info">
-                <p>some text</p>
+            <div class="item-outer">
+                <h3 class="item-outer__header">2 .</h3>
+                <div class="how-works__item">
+                    <img class="how-works__img" src="/src/images/warehouse.svg" alt="">
+                    <p>Come in and view the unit</p>
+                </div>
+            </div>
+            <div class="item-outer">
+                <h3 class="item-outer__header">3 .</h3>
+                <div class="how-works__item">
+                    <img class="how-works__img" src="/src/images/contract.svg" alt="">
+                    <p>complete the agreement</p>
+                </div>
+            </div>
+            <div class="item-outer">
+                <h3 class="item-outer__header">4 .</h3>
+                <div class="how-works__item">
+                    <img class="how-works__img" src="/src/images/lorry.svg" alt="">
+                    <p>Move your stuff in</p>
+                </div>
             </div>
         </div>
     </div>
-
-
-
 
 
 
