finished about section / added a footer

--- a/src/index.html
+++ b/src/index.html
@@ -112,37 +112,77 @@
 
     <div class="how-works">
         <h2>How Self Storage Works</h2>
-        <div class="how-works__container">
-            <div class="item-outer">
-                <h3 class="item-outer__header">1 .</h3>
-                <div class="how-works__item">
-                    <img class="how-works__img" src="/src/images/computer.svg" alt="">
+        <div class="how-works__inner">
+            <div class="item">
+                <h3 class="item__header">1 .</h3>
+                <div class="item__content">
+                    <img class="item__img" src="/src/images/computer.svg" alt="">
                     <p>Complete the enquiry form online</p>
                 </div>
             </div>
-            <div class="item-outer">
-                <h3 class="item-outer__header">2 .</h3>
-                <div class="how-works__item">
-                    <img class="how-works__img" src="/src/images/warehouse.svg" alt="">
+            <div class="item">
+                <h3 class="item__header">2 .</h3>
+                <div class="item__content">
+                    <img class="item__img" src="/src/images/warehouse.svg" alt="">
                     <p>Come in and view the unit</p>
                 </div>
             </div>
-            <div class="item-outer">
-                <h3 class="item-outer__header">3 .</h3>
-                <div class="how-works__item">
-                    <img class="how-works__img" src="/src/images/contract.svg" alt="">
-                    <p>complete the agreement</p>
+            <div class="item">
+                <h3 class="item__header">3 .</h3>
+                <div class="item__content">
+                    <img class="item__img" src="/src/images/contract.svg" alt="">
+                    <p>Complete the agreement</p>
                 </div>
             </div>
-            <div class="item-outer">
-                <h3 class="item-outer__header">4 .</h3>
-                <div class="how-works__item">
-                    <img class="how-works__img" src="/src/images/lorry.svg" alt="">
+            <div class="item">
+                <h3 class="item__header">4 .</h3>
+                <div class="item__content">
+                    <img class="item__img" src="/src/images/lorry.svg" alt="">
                     <p>Move your stuff in</p>
                 </div>
             </div>
         </div>
     </div>
+
+    <div class="about">
+        <div class="about__inner">
+            <div class="about__img"></div>
+            <div class="about__info">
+                <h3>A storage company you can trust</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque velit ut aliquid placeat doloribus
+                    officia ullam saepe, quod sequi asperiores, numquam sapiente quidem expedita! Veritatis iure itaque
+                    ex voluptatum aperiam.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque velit ut aliquid placeat doloribus
+                    officia ullam saepe, quod sequi asperiores, numquam sapiente quidem expedita! Veritatis iure itaque
+                    ex voluptatum aperiam. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque velit ut
+                    aliquid placeat doloribus officia ullam saepe, quod sequi asperiores, numquam sapiente quidem
+                    expedita! Veritatis.</p>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <div class="footer-top">
+            <div class="footer-top__left">
+                <img class="footer-top__icon" src="/src/images/phone.svg" alt="">
+                <span>02890111111</span>
+                <img class="footer-top__icon" src="/src/images/email.svg" alt="">
+                <span>info@company.com</span>
+            </div>
+            <div class="footer-top__right">
+                <img class="footer-top__icon" src="/src/images/facebook.svg" alt="">
+                <img class="footer-top__icon" src="/src/images/twitter.svg" alt="">
+                <img class="footer-top__icon" src="/src/images/youtube.svg" alt="">
+                <img class="footer-top__icon" src="/src/images/google.svg" alt="">
+            </div>
+        </div>
+        <div class="footer-middle">
+            <p>some text</p>
+        </div>
+        <div class="footer-bottom">
+            <p>some text</p>
+        </div>
+    </footer>
 
 
 
