--- a/src/index.html
+++ b/src/index.html
@@ -170,17 +170,41 @@
                 <span>info@company.com</span>
             </div>
             <div class="footer-top__right">
-                <img class="footer-top__icon" src="/src/images/facebook.svg" alt="">
-                <img class="footer-top__icon" src="/src/images/twitter.svg" alt="">
-                <img class="footer-top__icon" src="/src/images/youtube.svg" alt="">
-                <img class="footer-top__icon" src="/src/images/google.svg" alt="">
+                <a href="#"><img class="footer-top__icon" src="/src/images/facebook.svg" alt=""></a>
+                <a href="#"><img class="footer-top__icon" src="/src/images/twitter.svg" alt=""></a>
+                <a href="#"><img class="footer-top__icon" src="/src/images/youtube.svg" alt=""></a>
+                <a href="#"><img class="footer-top__icon" src="/src/images/google.svg" alt=""></a>
             </div>
         </div>
         <div class="footer-middle">
-            <p>some text</p>
+            <div class="footer-middle__links">
+                <h3>Storage Type</h3>
+                <ul>
+                    <li><a href="#">House Storage</a></li>
+                    <li><a href="#">Business Storage</a></li>
+                    <li><a href="#">Student Storage</a></li>
+                </ul>
+            </div>
+            <div class="footer-middle__links">
+                <h3>Company Info</h3>
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Cookie Policy</a></li>
+                </ul>
+            </div>
+            <div class="footer-middle__links">
+                <h3>Customer Support</h3>
+                <ul>
+                    <li><a href="#">FAQ's</a></li>
+                    <li><a href="#">Storage Checklist</a></li>
+                    <li><a href="#">Site Map</a></li>
+                </ul>
+            </div>
         </div>
         <div class="footer-bottom">
-            <p>some text</p>
+            <p>&copy; Storage Company 2020</p>
+            <p>Website created by <a href="#">Liam McAllister</a></p>
         </div>
     </footer>
 
