Created house, business and student pages

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
 
     <nav class="navbar__bottom">
         <div class="navbar__container">
-            <a href="#"><img class="navbar__logo" src="/src/images/box-white.svg" alt="Company Logo"></a>
+            <a href="index.html"><img class="navbar__logo" src="/src/images/box-white.svg" alt="Company Logo"></a>
             <input class="burger-btn" type="checkbox" id="burger-btn" />
             <label class="burger-label" for="burger-btn">
                 <span class="bar top"></span>
@@ -35,9 +35,9 @@
                 <span class="bar bottom"></span>
             </label>
             <ul class="navbar__nav">
-                <li class="nav__item"><a href="#" class="nav__link">House</a></li>
-                <li class="nav__item"><a href="#" class="nav__link">Business</a></li>
-                <li class="nav__item"><a href="#" class="nav__link">Student</a></li>
+                <li class="nav__item"><a href="house.html" class="nav__link">House</a></li>
+                <li class="nav__item"><a href="business.html" class="nav__link">Business</a></li>
+                <li class="nav__item"><a href="student.html" class="nav__link">Student</a></li>
                 <li class="nav__item"><a href="#" class="nav__link">Packing Supplies</a></li>
                 <li class="nav__item"><a href="#" class="nav__link">FAQ's</a></li>
             </ul>
@@ -45,8 +45,8 @@
     </nav>
 
     <header class="hero">
-        <div class="hero__container-outer">
-            <div class="hero__container">
+        <div class="hero__container">
+            <div class="hero__container__inner">
                 <h1 class="header-top">Storage</h1>
                 <h1 class="header-middle">Made</h1>
                 <h1 class="header-bottom">Easy</h1>
@@ -112,7 +112,7 @@
 
     <div class="how-works">
         <h2>How Self Storage Works</h2>
-        <div class="how-works__inner">
+        <div class="how-works__container">
             <div class="item">
                 <h3 class="item__header">1 .</h3>
                 <div class="item__content">
@@ -145,7 +145,7 @@
     </div>
 
     <div class="about">
-        <div class="about__inner">
+        <div class="about__container">
             <div class="about__img"></div>
             <div class="about__info">
                 <h3>A storage company you can trust</h3>
@@ -165,7 +165,7 @@
         <div class="footer-top">
             <div class="footer-top__left">
                 <img class="footer-top__icon" src="/src/images/phone.svg" alt="">
-                <span>02890111111</span>
+                <span>028 90 111 111</span>
                 <img class="footer-top__icon" src="/src/images/email.svg" alt="">
                 <span>info@company.com</span>
             </div>
@@ -180,9 +180,9 @@
             <div class="footer-middle__links">
                 <h3>Storage Type</h3>
                 <ul>
-                    <li><a href="#">House Storage</a></li>
-                    <li><a href="#">Business Storage</a></li>
-                    <li><a href="#">Student Storage</a></li>
+                    <li><a href="house.html">House Storage</a></li>
+                    <li><a href="business.html">Business Storage</a></li>
+                    <li><a href="student.html">Student Storage</a></li>
                 </ul>
             </div>
             <div class="footer-middle__links">
@@ -203,8 +203,8 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; Storage Company 2020</p>
-            <p>Website created by <a href="#">Liam McAllister</a></p>
+            <small>&copy; Storage Company 2020</small>
+            <small>Website created by <a href="#">Liam McAllister</a></small>
         </div>
     </footer>
 
