Added content to house.html

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="/src/styles/css/styles.css">
 </head>
 
-<body class="body-home">
+<body class="body-house">
 
     <div class="navbar__top">
         <div class="navbar__container">
