--- a/src/house.html
+++ b/src/house.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="/src/styles/css/styles.css">
 </head>
 
-<body class="body-home">
+<body class="body-house">
 
     <div class="navbar__top">
         <div class="navbar__container">
@@ -44,7 +44,89 @@
         </div>
     </nav>
 
-    <h1>house</h1>
+    <header class="house-header">
+        <div class="house-header__info">
+            <h1>Household Storage</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
+                inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
+                voluptate quod!Consequuntur? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam cupiditate
+                voluptatum similique. Architecto sunt, mollitia iure obcaecati harum, dolorem neque consequuntur atque
+                aliquid cupiditate at quidem, ipsa beatae eaque dolore.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
+                inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
+                voluptatequod!Consequuntur?</p>
+        </div>
+        <div class="house-header__img">
+
+        </div>
+    </header>
+
+    <div class="why-us">
+        <div class="why-us__container">
+            <h3>Store with us</h3>
+            <p>Why we are the best place for your possessions...</p>
+            <div class="list-container">
+                <ul class="why-us__list">
+                    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde doloribus cum libero quae error
+                        tenetur exercitationem enim fugiat at iusto eligendi, illum ea laborum corrupti ad aliquam eius
+                        repellat id?</li>
+                    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde doloribus cum libero quae error
+                        tenetur exercitationem enim fugiat at iusto eligendi, illum ea laborum corrupti ad aliquam eius
+                        repellat id?</li>
+                    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde doloribus cum libero quae error
+                        tenetur exercitationem enim fugiat at iusto eligendi, illum ea laborum corrupti ad aliquam eius
+                        repellat id?</li>
+                </ul>
+                <ul class="why-us__list">
+                    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde doloribus cum libero quae error
+                        tenetur exercitationem enim fugiat at iusto eligendi, illum ea laborum corrupti ad aliquam eius
+                        repellat id?</li>
+                    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde doloribus cum libero quae error
+                        tenetur exercitationem enim fugiat at iusto eligendi, illum ea laborum corrupti ad aliquam eius
+                        repellat id?</li>
+                    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde doloribus cum libero quae error
+                        tenetur exercitationem enim fugiat at iusto eligendi, illum ea laborum corrupti ad aliquam eius
+                        repellat id?</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="access">
+        <h3>Fully Secure Self-Storage</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
+            inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
+            voluptatequod!Consequuntur?</p>
+        <p>Unlimited access to your goods during our Opening Hours:</p>
+        <ul>
+            <li>Mon to Fri 8.30am to 6pm</li>
+            <li>Sat 9.00am to 4pm</li>
+            <li>(Closed Sunday and Public Holidays)</li>
+        </ul>
+    </div>
+
+    <div class="flexible">
+        <h3>Flexible</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
+            inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
+            voluptatequod!Consequuntur?</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
+            inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
+            voluptatequod!Consequuntur?</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
+            inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
+            voluptatequod!Consequuntur?</p>
+    </div>
+
+    <div class="security">
+        <h3>Security</h3>
+    </div>
+
+    <div class="quote">
+        <h3>Looking for space?</h3>
+        <p>We offer a wide range of sizes</p>
+        <button>Quote</button>
+    </div>
 
 
 
