Created faq.html / refactored html and css

--- a/src/house.html
+++ b/src/house.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="/src/styles/css/styles.css">
 </head>
 
-<body class="body-house">
+<body class="grid-12">
 
     <div class="navbar__top">
         <div class="navbar__container">
@@ -98,7 +98,7 @@
             inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
             voluptatequod!Consequuntur?</p>
         <p>Unlimited access to your goods during our Opening Hours:</p>
-        <ul>
+        <ul class="access__list">
             <li>Mon to Fri 8.30am to 6pm</li>
             <li>Sat 9.00am to 4pm</li>
             <li>(Closed Sunday and Public Holidays)</li>
@@ -106,20 +106,31 @@
     </div>
 
     <div class="flexible">
-        <h3>Flexible</h3>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
-            inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
-            voluptatequod!Consequuntur?</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
-            inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
-            voluptatequod!Consequuntur?</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
-            inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
-            voluptatequod!Consequuntur?</p>
+        <div class="flexible__inner">
+            <div class="flexible__img"></div>
+            <div class="flexible__info">
+                <h3>Flexible</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
+                    inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
+                    voluptatequod!Consequuntur?</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
+                    inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
+                    voluptatequod!Consequuntur?</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
+                    inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
+                    voluptatequod!Consequuntur?</p>
+            </div>
+        </div>
     </div>
 
     <div class="security">
         <h3>Security</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
+            inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
+            voluptatequod!Consequuntur?</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
+            inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
+            voluptatequod!Consequuntur?</p>
     </div>
 
     <div class="quote">
