--- a/src/index.html
+++ b/src/index.html
@@ -17,41 +17,38 @@
     <link rel="stylesheet" href="/src/styles/css/styles.css">
 </head>
 
-<body class="body-house">
+<body class="grid-12">
 
-    <div class="navbar__top">
-        <div class="navbar__container">
-            <p>Want to speak with a human? Call: <span class="navbar__phone">028 90 111 111</span></p>
+    <div class="navbar-top">
+        <div class="navbar-inner">
+            <p>Want to speak with a human? Call: <span class="navbar-inner__phone">028 90 111 111</span></p>
         </div>
     </div>
-
-    <nav class="navbar__bottom">
-        <div class="navbar__container">
-            <a href="index.html"><img class="navbar__logo" src="/src/images/box-white.svg" alt="Company Logo"></a>
+    <nav class="navbar-bottom">
+        <div class="navbar-inner">
+            <a href="index.html"><img class="navbar-inner__logo" src="/src/images/box-white.svg" alt="Company Logo"></a>
             <input class="burger-btn" type="checkbox" id="burger-btn" />
             <label class="burger-label" for="burger-btn">
                 <span class="bar top"></span>
                 <span class="bar middle"></span>
                 <span class="bar bottom"></span>
             </label>
-            <ul class="navbar__nav">
+            <ul class="navbar-inner__nav">
                 <li class="nav__item"><a href="house.html" class="nav__link">House</a></li>
                 <li class="nav__item"><a href="business.html" class="nav__link">Business</a></li>
                 <li class="nav__item"><a href="student.html" class="nav__link">Student</a></li>
-                <li class="nav__item"><a href="#" class="nav__link">Packing Supplies</a></li>
-                <li class="nav__item"><a href="#" class="nav__link">FAQ's</a></li>
+                <li class="nav__item"><a href="packing.html" class="nav__link">Packing Supplies</a></li>
+                <li class="nav__item"><a href="faq.html" class="nav__link">FAQ's</a></li>
             </ul>
         </div>
     </nav>
 
     <header class="hero">
-        <div class="hero__container">
-            <div class="hero__container__inner">
-                <h1 class="header-top">Storage</h1>
-                <h1 class="header-middle">Made</h1>
-                <h1 class="header-bottom">Easy</h1>
-                <button class="btn-large">Get my free quote</button>
-            </div>
+        <div class="hero__inner">
+            <h1 class="header-top">Storage</h1>
+            <h1 class="header-middle">Made</h1>
+            <h1 class="header-bottom">Easy</h1>
+            <button class="btn-large">Get my free quote</button>
         </div>
     </header>
 
@@ -149,14 +146,13 @@
             <div class="about__img"></div>
             <div class="about__info">
                 <h3>A storage company you can trust</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque velit ut aliquid placeat doloribus
-                    officia ullam saepe, quod sequi asperiores, numquam sapiente quidem expedita! Veritatis iure itaque
-                    ex voluptatum aperiam.</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque velit ut aliquid placeat doloribus
-                    officia ullam saepe, quod sequi asperiores, numquam sapiente quidem expedita! Veritatis iure itaque
-                    ex voluptatum aperiam. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque velit ut
-                    aliquid placeat doloribus officia ullam saepe, quod sequi asperiores, numquam sapiente quidem
-                    expedita! Veritatis.</p>
+                <p>We strive to make storing your valued possessions simple and easy, which is why we offer convenient
+                    storage solutions for every need, at a price you’ll love.</p>
+                <p>Whether you need a self storage unit for storing household, business or student items, you’ll find
+                    exactly what you need at Safestore. With 125 storage locations across the country, there’s bound to
+                    be Safestore self storage facility near you. You can stay for as long as you want; we offer 50% off
+                    for up to 8 weeks for short term storage, or 20% discount on any long term storage. Get a free quote
+                    today.</p>
             </div>
         </div>
     </div>
