Updated house.html / refactored css

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
     </header>
 
     <div class="services">
-        <div class="services__container">
+        <div class="services__inner">
             <div class="card">
                 <a href="#">
                     <div class="card__img">
@@ -109,7 +109,7 @@
 
     <div class="how-works">
         <h2>How Self Storage Works</h2>
-        <div class="how-works__container">
+        <div class="how-works__inner">
             <div class="item">
                 <h3 class="item__header">1 .</h3>
                 <div class="item__content">
@@ -142,9 +142,9 @@
     </div>
 
     <div class="about">
-        <div class="about__container">
-            <div class="about__img"></div>
-            <div class="about__info">
+        <div class="about__inner">
+            <div class="about__inner__img"></div>
+            <div class="about__inner__info">
                 <h3>A storage company you can trust</h3>
                 <p>We strive to make storing your valued possessions simple and easy, which is why we offer convenient
                     storage solutions for every need, at a price you’ll love.</p>
