--- a/src/student.html
+++ b/src/student.html
@@ -17,29 +17,28 @@
     <link rel="stylesheet" href="/src/styles/css/styles.css">
 </head>
 
-<body class="body-home">
+<body class="grid-12">
 
-    <div class="navbar__top">
-        <div class="navbar__container">
-            <p>Want to speak with a human? Call: <span class="navbar__phone">028 90 111 111</span></p>
+    <div class="navbar-top">
+        <div class="navbar-inner">
+            <p>Want to speak with a human? Call: <span class="navbar-inner__phone">028 90 111 111</span></p>
         </div>
     </div>
-
-    <nav class="navbar__bottom">
-        <div class="navbar__container">
-            <a href="index.html"><img class="navbar__logo" src="/src/images/box-white.svg" alt="Company Logo"></a>
+    <nav class="navbar-bottom">
+        <div class="navbar-inner">
+            <a href="index.html"><img class="navbar-inner__logo" src="/src/images/box-white.svg" alt="Company Logo"></a>
             <input class="burger-btn" type="checkbox" id="burger-btn" />
             <label class="burger-label" for="burger-btn">
                 <span class="bar top"></span>
                 <span class="bar middle"></span>
                 <span class="bar bottom"></span>
             </label>
-            <ul class="navbar__nav">
+            <ul class="navbar-inner__nav">
                 <li class="nav__item"><a href="house.html" class="nav__link">House</a></li>
                 <li class="nav__item"><a href="business.html" class="nav__link">Business</a></li>
                 <li class="nav__item"><a href="student.html" class="nav__link">Student</a></li>
-                <li class="nav__item"><a href="#" class="nav__link">Packing Supplies</a></li>
-                <li class="nav__item"><a href="#" class="nav__link">FAQ's</a></li>
+                <li class="nav__item"><a href="packing.html" class="nav__link">Packing Supplies</a></li>
+                <li class="nav__item"><a href="faq.html" class="nav__link">FAQ's</a></li>
             </ul>
         </div>
     </nav>
