--- a/src/house.html
+++ b/src/house.html
@@ -19,54 +19,55 @@
 
 <body class="grid-12">
 
-    <div class="navbar__top">
-        <div class="navbar__container">
-            <p>Want to speak with a human? Call: <span class="navbar__phone">028 90 111 111</span></p>
+    <div class="navbar-top">
+        <div class="navbar-inner">
+            <p>Want to speak with a human? Call: <span class="navbar-inner__phone">028 90 111 111</span></p>
         </div>
     </div>
-
-    <nav class="navbar__bottom">
-        <div class="navbar__container">
-            <a href="index.html"><img class="navbar__logo" src="/src/images/box-white.svg" alt="Company Logo"></a>
+    <nav class="navbar-bottom">
+        <div class="navbar-inner">
+            <a href="index.html"><img class="navbar-inner__logo" src="/src/images/box-white.svg" alt="Company Logo"></a>
             <input class="burger-btn" type="checkbox" id="burger-btn" />
             <label class="burger-label" for="burger-btn">
                 <span class="bar top"></span>
                 <span class="bar middle"></span>
                 <span class="bar bottom"></span>
             </label>
-            <ul class="navbar__nav">
+            <ul class="navbar-inner__nav">
                 <li class="nav__item"><a href="house.html" class="nav__link">House</a></li>
                 <li class="nav__item"><a href="business.html" class="nav__link">Business</a></li>
                 <li class="nav__item"><a href="student.html" class="nav__link">Student</a></li>
-                <li class="nav__item"><a href="#" class="nav__link">Packing Supplies</a></li>
-                <li class="nav__item"><a href="#" class="nav__link">FAQ's</a></li>
+                <li class="nav__item"><a href="packing.html" class="nav__link">Packing Supplies</a></li>
+                <li class="nav__item"><a href="faq.html" class="nav__link">FAQ's</a></li>
             </ul>
         </div>
     </nav>
 
     <header class="house-header">
-        <div class="house-header__info">
-            <h1>Household Storage</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
-                inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
-                voluptate quod!Consequuntur? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam cupiditate
-                voluptatum similique. Architecto sunt, mollitia iure obcaecati harum, dolorem neque consequuntur atque
-                aliquid cupiditate at quidem, ipsa beatae eaque dolore.</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
-                inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
-                voluptatequod!Consequuntur?</p>
-        </div>
-        <div class="house-header__img">
-
+        <div class="header__inner">
+            <div class="house-header__info">
+                <h1>Household Storage</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
+                    inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
+                    voluptate quod!Consequuntur? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam
+                    cupiditate
+                    voluptatum similique. Architecto sunt, mollitia iure obcaecati harum, dolorem neque consequuntur
+                    atque
+                    aliquid cupiditate at quidem, ipsa beatae eaque dolore.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
+                    inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
+                    voluptatequod!Consequuntur?</p>
+            </div>
+            <div class="house-header__img"></div>
         </div>
     </header>
 
     <div class="why-us">
-        <div class="why-us__container">
+        <div class="why-us__inner">
             <h3>Store with us</h3>
             <p>Why we are the best place for your possessions...</p>
-            <div class="list-container">
-                <ul class="why-us__list">
+            <div class="list">
+                <ul class="list__why-us">
                     <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde doloribus cum libero quae error
                         tenetur exercitationem enim fugiat at iusto eligendi, illum ea laborum corrupti ad aliquam eius
                         repellat id?</li>
@@ -77,7 +78,7 @@
                         tenetur exercitationem enim fugiat at iusto eligendi, illum ea laborum corrupti ad aliquam eius
                         repellat id?</li>
                 </ul>
-                <ul class="why-us__list">
+                <ul class="list__why-us">
                     <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde doloribus cum libero quae error
                         tenetur exercitationem enim fugiat at iusto eligendi, illum ea laborum corrupti ad aliquam eius
                         repellat id?</li>
@@ -98,7 +99,7 @@
             inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
             voluptatequod!Consequuntur?</p>
         <p>Unlimited access to your goods during our Opening Hours:</p>
-        <ul class="access__list">
+        <ul>
             <li>Mon to Fri 8.30am to 6pm</li>
             <li>Sat 9.00am to 4pm</li>
             <li>(Closed Sunday and Public Holidays)</li>
@@ -107,9 +108,8 @@
 
     <div class="flexible">
         <div class="flexible__inner">
-            <div class="flexible__img"></div>
-            <div class="flexible__info">
-                <h3>Flexible</h3>
+            <div class="flexible__inner__img"></div>
+            <div class="flexible__inner__info">
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
                     inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
                     voluptatequod!Consequuntur?</p>
